1999-12-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	fixed core dump

1999-12-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleFocusIn):
	* fvwm/fvwm.c (SetRCDefaults):
	* fvwm/update.c (apply_window_updates):
	* fvwm/module_interface.c:
	* fvwm/icons.c (DrawIconWindow):
	* fvwm/add_window.c (get_default_window_background):
	(setup_style_and_decor):
	* fvwm/style.c (update_window_color_style):
	(ProcessNewStyle):
	(update_window_color_style):
	* fvwm/borders.c (get_common_decorations):
	* fvwm/fvwm.h (FvwmWindow):
	new styles HiligtFore, HilightBack and HilightColorset; old commands
	HilightColor and HilightColorset are obsolete

	* fvwm/fvwm.c (CreateGCs):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/icons.c:
	* fvwm/borders.c:
	* fvwm/misc.c (NewFontAndColor):
	renamed ScratchGC3 to TitleGC

1999-12-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (SetBorderStyle):
	* fvwm/builtins.c (do_button_style):
	(do_title_style):
	moved lots of duplicate code into a common function
	general clean up
	ButtonStyle, TitleStyle and BorderStyle commands take effect without a
	recapture

	* fvwm/fvwm.c (InitFvwmDecor):
	(DestroyFvwmDecor):
	moved to builtins.c

	* fvwm/style.h:
	* fvwm/style.c:
	* fvwm/update.h:
	* fvwm/update.c:
	separated style updating from the code that determined which parts to
	update; moved the updating code to new files update.[ch] so that this
	can handle ...Style changes too without calling the same code several
	times

	* fvwm/windowlist.c (do_windowList):
	* fvwm/menus.c(change_mr_menu_style):
	WindowList uses 'WindowList' menu style if defined

	* fvwm/screen.h (ScreenInfo):
	* fvwm/fvwm.c (CreateGCs):
	* fvwm/cursor.c (CursorStyle):
	new members Scr.MonoGC, Scr.ScratchMonoPixmap for creating empty cursors
	cursorstyle command understands new cursor names 'none' and 'tiny'

	* fvwm/colors.c (CreateGCs):
	function moved to fvwm.c

	* fvwm/add_window.c (destroy_icon):