@@ -1,3 +1,8 @@
+1999-12-20  Dan Espen  <dane@mk.telcordia.com>
+
+	* libs/ColorUtils.c: Use Lesstif's shadow/hilite calcs.
+	Note: FvwmTheme not changed yet, bug observed in pixel_to_color_string.
+	
 1999-12-19  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
